--- a/config.yaml
+++ b/config.yaml
@@ -4,6 +4,8 @@ theme: hugo-theme-stack
 paginate: 10
 title: The Graduated Cylinder
 
+ignoreFiles: ["\\.Rmd$", "\\.Rmarkdown$", "_cache$", "\\.knit\\.md$", "\\.utf8\\.md$"]
+
 # Change it to your Disqus shortname before using
 disqusShortname: awprc
 
