--- a/content/config.toml
+++ b/content/config.toml
@@ -1,4 +1,6 @@
 theme = "hugo-theme-stack"
-baseURL = "http://example.org/"
+baseURL = "http://gradcylinder.org/"
 languageCode = "en-us"
-title = "My New Hugo Site"
+title = "The Graduated Cylinder"
+
+ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_cache$", "\\.knit\\.md$", "\\.utf8\\.md$"]
